recycler_view, adapter

--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -24,14 +24,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/white"
+            android:textColor="@color/purple"
             tools:text="Салфетки"/>
 
         <TextView
-            android:id="@+id/tv_name2"
+            android:id="@+id/tv_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/purple"
             tools:text="0"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
