--- a/app/src/main/res/layout/activity_shop_item.xml
+++ b/app/src/main/res/layout/activity_shop_item.xml
@@ -2,8 +2,9 @@
 <androidx.fragment.app.FragmentContainerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/shop_item_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/shop_item_container"
     tools:context=".presentation.ShopItemActivity"
-    tools:layout="@layout/fragment_shop_item" />
+    tools:layout="@layout/fragment_shop_item"
+    />
